@@ -4,7 +4,7 @@ pkginclude_HEADERS = gsl_ieee_utils.h
 
 libgslieeeutils_la_SOURCES =  print.c make_rep.c gsl_ieee_utils.h env.c fp.c read.c
 
-noinst_HEADERS = fp-aix.c fp-darwin.c fp-hpux.c fp-hpux11.c fp-irix.c fp-m68klinux.c fp-ppclinux.c fp-solaris.c fp-sparclinux.c fp-sunos4.c fp-tru64.c fp-unknown.c fp-x86linux.c fp-freebsd.c fp-os2emx.c fp-netbsd.c fp-openbsd.c endian.c standardize.c
+noinst_HEADERS = fp-aix.c fp-darwin.c fp-hpux.c fp-hpux11.c fp-irix.c fp-gnum68k.c fp-gnuppc.c fp-solaris.c fp-gnusparc.c fp-sunos4.c fp-tru64.c fp-unknown.c fp-gnux86.c fp-freebsd.c fp-os2emx.c fp-netbsd.c fp-openbsd.c endian.c standardize.c
 
 INCLUDES= -I$(top_builddir)
 
