@@ -1,4 +1,4 @@
-/* ieee-utils/fp-ppclinux.c
+/* ieee-utils/fp-gnuppc.c
  * 
  * Copyright (C) 1996, 1997, 1998, 1999, 2000 Brian Gough, John Fisher
  * 
@@ -24,7 +24,7 @@
 
 
 /*
- * Identical to fp-linux.c, except with references to
+ * Identical to fp-gnux86.c, except with references to
  * _FPU_SINGLE, _FPU_DOUBLE, _FPU_EXTENDED, _FPU_MASK_DM
  * and _FPU_MASK_PM converted to errors.
  */
@@ -37,13 +37,13 @@ gsl_ieee_set_mode (int precision, int rounding, int exception_mask)
   switch (precision)
     {
     case GSL_IEEE_SINGLE_PRECISION:
-      GSL_ERROR ("powerpc linux only supports default precision rounding", GSL_EUNSUP);
+      GSL_ERROR ("powerpc only supports default precision rounding", GSL_EUNSUP);
       break ;
     case GSL_IEEE_DOUBLE_PRECISION:
-      GSL_ERROR ("powerpc linux only supports default precision rounding", GSL_EUNSUP);
+      GSL_ERROR ("powerpc only supports default precision rounding", GSL_EUNSUP);
       break ;
     case GSL_IEEE_EXTENDED_PRECISION:
-      GSL_ERROR ("powerpc linux only supports default precision rounding", GSL_EUNSUP);
+      GSL_ERROR ("powerpc only supports default precision rounding", GSL_EUNSUP);
       break ;
     }
 
@@ -69,7 +69,7 @@ gsl_ieee_set_mode (int precision, int rounding, int exception_mask)
     mode |= _FPU_MASK_IM ;
 
   if (exception_mask & GSL_IEEE_MASK_DENORMALIZED)
-    GSL_ERROR ("powerpc linux does not support the denormalized operand exception. "
+    GSL_ERROR ("powerpc does not support the denormalized operand exception. "
 	       "Use 'mask-denormalized' to work around this.", GSL_EUNSUP) ;
 
   if (exception_mask & GSL_IEEE_MASK_DIVISION_BY_ZERO)
@@ -83,7 +83,7 @@ gsl_ieee_set_mode (int precision, int rounding, int exception_mask)
 
   if (exception_mask & GSL_IEEE_TRAP_INEXACT)
     {
-     GSL_ERROR ("powerpc linux does not support traps for inexact operations", GSL_EUNSUP) ;
+     GSL_ERROR ("powerpc does not support traps for inexact operations", GSL_EUNSUP) ;
     }
 
   _FPU_SETCW(mode) ;
